--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -1,57 +1,71 @@
+
+
 <div class="container"
-    fxLayout="row"
-    fxLayout.sm="column"
-    fxLayout.xs="column"
-    fxLayoutAlign.gt-md="space-around center"
-    fxLayoutGap="10px" 
-    fxLayoutGap.xs="0">
+fxLayout="row"
+fxLayout.sm="column"
+fxLayout.xs="column"
+fxLayoutAlign.gt-md="space-around center"
+fxLayoutGap="10px" 
+fxLayoutGap.xs="0">
 
-  <div fxFlex="40" *ngIf="dish">
-    <div>
-      <mat-card>
-        <mat-card-header>
-          <mat-card-title>
-            <h3>{{dish.name | uppercase}}</h3>
-          </mat-card-title>
-        </mat-card-header>
-        <img mat-card-image src="{{dish.image}}" alt="{{dish.name}}">
-        <mat-card-content>
-          <p>{{dish.description}}</p>
-        </mat-card-content>
-        <mat-card-actions>
-          <button mat-button [routerLink]="['/dishdetail',prev]">
-            <span class="fa fa-chevron-left fa-lg"></span>
-          </button>
-          <button mat-button (click)="goBack()">BACK</button>
-          <button mat-button>LIKE</button>
-          <button mat-button>SHARE</button>
-          <span class="flex-spacer"></span>
-          <button mat-button [routerLink]="['/dishdetail',next]">
-            <span class="fa fa-chevron-right fa-lg"></span>
-          </button>
-        </mat-card-actions>
-      </mat-card>
-    </div>
-  </div>
+<div fxFlex="40" *ngIf="dish">
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>
+      <h3 *ngIf="dish">{{dish.name | uppercase}}</h3>
+    </mat-card-title>
+  </mat-card-header>
+  <img mat-card-image src={{dish.image}} alt={{dish.name}}>
+  <mat-card-content>
+    <p>{{dish.description}}
+    </p>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-button [routerLink]="['/dishdetail', prev]"><span class="fa fa-chevron-left fa-lg"></span></button>
+    <button mat-button (click)="goBack()">BACK</button>
+    <button mat-button>LIKE</button>
+    <button mat-button>SHARE</button>
+    <span class="flex-spacer"></span>
+    <button mat-button [routerLink]="['/dishdetail', next]"><span class="fa fa-chevron-right fa-lg"></span></button>
+  </mat-card-actions>
+</mat-card>
+</div>
 
-  <div fxFlex="40" *ngIf="dish">
-    <mat-list>
-      <h1>Comments</h1>
-        <mat-list-item *ngFor="let comment of dish.comments">
-          <p matLine>
-            <span> {{comment.comment}} </span>
-          </p>
-          <p matLine>
-            <span> {{comment.rating}} Stars</span>
-          </p>
-          <p matLine>
-            <span>-- {{comment.author}} {{comment.date | date}}</span>
-          </p>
-        </mat-list-item>
-      </mat-list>
-  </div>
-  <div fxFlex [hidden]="dish">
-    <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
-  </div>
+<div fxflex="80" *ngIf="dish">
+<mat-list>
+  <h3>Comments</h3>
+  <mat-list-item *ngFor="let c of dish.comments">
+    <p matLine><span>{{c.comment}}</span></p>
+    <p matLine><span>{{c.rating}} Stars</span></p>
+    <p matLine><span>-- {{c.author}} {{c.date | date}}</span></p> 
+  </mat-list-item>
+  <mat-list-item *ngIf="commentsForm.valid">
+    <p matLine><span>{{commentsForm.get('comment').value}}</span></p>
+    <p matLine><span>{{commentsForm.get('rating').value}} Stars </span></p>
+    <p matLine><span>-- {{commentsForm.get('author').value}} </span></p> 
+  </mat-list-item>
+</mat-list>
 
+<form novalidate [formGroup]="commentsForm" #fform="ngForm" (ngSubmit)="onSubmit()">
+  <p>
+    <mat-form-field class="full-width">
+      <input matInput formControlName="author" placeholder="Name" type="text" required>
+      <mat-error *ngIf="formErrors.author">{{formErrors.author}}</mat-error>
+    </mat-form-field>
+  </p>
+  <p>
+    <mat-slider thumbLabel formControlName="rating" min="1" max="5" tickInterval="1"></mat-slider>
+  </p>
+  <p>
+    <mat-form-field class="full-width">
+      <textarea matInput formControlName="comment" placeholder="Your Comment" rows=12 required></textarea>
+      <mat-error *ngIf="formErrors.comment">{{formErrors.comment}}</mat-error>
+    </mat-form-field>
+  </p>
+  <button type="submit" [disabled]="commentsForm.invalid" mat-button class="background-primary text-floral-white">Submit</button>
+</form>
+</div>
+<div [hidden]="dish">
+<mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+</div>
 </div>
