--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -65,7 +65,11 @@ fxLayoutGap.xs="0">
   <button type="submit" [disabled]="commentsForm.invalid" mat-button class="background-primary text-floral-white">Submit</button>
 </form>
 </div>
-<div [hidden]="dish">
+<div [hidden]="dish || errMess">
 <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+</div>
+<div fxFlex *ngIf="errMess">
+  <h2>Error</h2>
+  <h4>{{errMess}}</h4>
 </div>
 </div>
