--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -8,7 +8,7 @@ fxLayoutAlign.gt-md="space-around center"
 fxLayoutGap="10px" 
 fxLayoutGap.xs="0">
 
-<div fxFlex="40" *ngIf="dish">
+<div fxFlex="40" *ngIf="dish" [@visibility]="visibility">
 <mat-card>
   <mat-card-header>
     <mat-card-title>
@@ -31,7 +31,7 @@ fxLayoutGap.xs="0">
 </mat-card>
 </div>
 
-<div fxflex="80" *ngIf="dish">
+<div fxflex="80" *ngIf="dish" [@visibility]="visibility">
 <mat-list>
   <h3>Comments</h3>
   <mat-list-item *ngFor="let c of dish.comments">
